create app event info and api key info page
