# apps/api/src/resources/projects/projects.service.ts
@@ -3,7 +3,7 @@ import { CreateProjectDto } from './dto/create-project.dto';
 import { UpdateProjectDto } from './dto/update-project.dto';
 import { db } from '~/db';
 import { projects as projectsModel } from '@logstrap/db';
-import { and, eq, sql } from 'drizzle-orm';
+import { and, desc, eq, gte, lt, lte, sql } from 'drizzle-orm';
 import { ITEMS_PER_QUERY } from '~/constants';
 import { plainToInstance } from 'class-transformer';
 import { FetchAllProjectsResponse } from './entities/response.entity';
@@ -154,11 +154,112 @@ export class ProjectsService {
     };
   }
 
-  update(id: number, updateProjectDto: UpdateProjectDto) {
-    return `This action updates a #${id} project`;
-  }
+  async getStats(id: string, userId: string) {
+    this.logger.log(`Getting stats for project: ${id}`);
+    const project = await this.findOne(id, userId);
+    // find the no of requests today vs yesterday and also find percentage change
+    const today = new Date();
+    today.setHours(0, 0, 0, 0); // Set to start of today
+    const yesterday = new Date(today);
+    yesterday.setDate(yesterday.getDate() - 1); // Set to start of yesterday
 
-  remove(id: number) {
-    return `This action removes a #${id} project`;
+    const [todayRequests] = await db
+      .select({
+        count: sql`count(*)`.mapWith(Number).as('count'),
+      })
+      .from(requestLogsTable)
+      .where(
+        and(
+          eq(requestLogsTable.projectId, id),
+          gte(requestLogsTable.timestamp, today),
+        ),
+      );
+
+    const [yesterdayRequests] = await db
+      .select({
+        count: sql`count(*)`.mapWith(Number).as('count'),
+      })
+      .from(requestLogsTable)
+      .where(
+        and(
+          eq(requestLogsTable.projectId, id),
+          gte(requestLogsTable.timestamp, yesterday),
+          lt(requestLogsTable.timestamp, today),
+        ),
+      );
+
+    const percentageChange = (
+      yesterdayRequests.count !== 0
+        ? ((todayRequests.count - yesterdayRequests.count) /
+            yesterdayRequests.count) *
+          100
+        : todayRequests.count > 0
+          ? 100
+          : 0
+    ).toFixed(2);
+
+    const apiRequestsPerDay = await db
+      .select({
+        date: sql`DATE(${requestLogsTable.timestamp})`.as('date'),
+        count: sql`COUNT(*)`.mapWith(Number).as('count'),
+      })
+      .from(requestLogsTable)
+      .where(eq(requestLogsTable.projectId, id))
+      .groupBy(sql`DATE(${requestLogsTable.timestamp})`)
+      .orderBy(desc(sql`DATE(${requestLogsTable.timestamp})`))
+      .limit(7);
+
+    const appEventsPerDay = await db
+      .select({
+        date: sql`DATE(${applicationLogsTable.timestamp})`.as('date'),
+        count: sql`COUNT(*)`.mapWith(Number).as('count'),
+      })
+      .from(applicationLogsTable)
+      .where(eq(applicationLogsTable.projectId, id))
+      .groupBy(sql`DATE(${applicationLogsTable.timestamp})`)
+      .orderBy(desc(sql`DATE(${applicationLogsTable.timestamp})`))
+      .limit(7);
+
+    const [totalLogs] = await db
+      .select({
+        count: sql`count(*)`.mapWith(Number).as('count'),
+      })
+      .from(applicationLogsTable)
+      .where(eq(applicationLogsTable.projectId, id));
+
+    const mostUsedApiRoute = await db
+      .select({
+        path: requestLogsTable.url,
+        count: sql`COUNT(*)`.mapWith(Number).as('count'),
+      })
+      .from(requestLogsTable)
+      .where(eq(requestLogsTable.projectId, id))
+      .groupBy(requestLogsTable.url)
+      .orderBy(desc(sql`COUNT(*)`))
+      .limit(5);
+
+    const mostFrequentAppEvent = await db
+      .select({
+        event: applicationLogsTable.message,
+        count: sql`COUNT(*)`.mapWith(Number).as('count'),
+      })
+      .from(applicationLogsTable)
+      .where(eq(applicationLogsTable.projectId, id))
+      .groupBy(applicationLogsTable.message)
+      .orderBy(desc(sql`COUNT(*)`))
+      .limit(5);
+
+    return {
+      logsCount: {
+        today: todayRequests.count,
+        yesterday: yesterdayRequests.count,
+        percentageChange,
+      },
+      totalLogs: totalLogs.count,
+      apiRequestsPerDay,
+      appEventsPerDay,
+      mostUsedApiRoute,
+      mostFrequentAppEvent,
+    };
   }
 }
